// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisItem /> should render 1`] = `
<withRouter(LinkContainer)
  to="/samples/bar/analyses/baz"
>
  <div
    className="list-group-item spaced"
    style={
      Object {
        "color": "#555",
      }
    }
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={4}
      >
        <strong>
          NuVs
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={5}
      >
        Started 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
         by bob
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={2}
      >
        <span>
          Foo
          <Label
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          >
            3
          </Label>
        </span>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={2}
        sm={2}
        xsHidden={true}
      >
        <RightIcon
          canModify={true}
          onRemove={[MockFunction]}
          ready={false}
        />
      </Col>
    </Row>
  </div>
</withRouter(LinkContainer)>
`;

exports[`<AnalysisItem /> should render when [placeholder=true] 1`] = `
<div
  className="list-group-item spaced"
  style={
    Object {
      "color": "#555",
    }
  }
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={4}
    >
      <strong>
        NuVs
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={5}
    >
      Started 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={2}
    />
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xsHidden={true}
    >
      <RightIcon
        canModify={true}
        onRemove={[MockFunction]}
        ready={false}
      />
    </Col>
  </Row>
</div>
`;

exports[`<AnalysisItem /> should render when [ready=false] 1`] = `
<withRouter(LinkContainer)
  to="/samples/bar/analyses/baz"
>
  <div
    className="list-group-item spaced"
    style={
      Object {
        "color": "#555",
      }
    }
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={4}
      >
        <strong>
          NuVs
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={5}
      >
        Started 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
         by bob
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={2}
      >
        <span>
          Foo
          <Label
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          >
            3
          </Label>
        </span>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={2}
        sm={2}
        xsHidden={true}
      >
        <RightIcon
          canModify={true}
          onRemove={[MockFunction]}
          ready={false}
        />
      </Col>
    </Row>
  </div>
</withRouter(LinkContainer)>
`;

exports[`<RightIcon /> should render loader when [ready=false] 1`] = `
<div
  className="pull-right"
>
  <Loader
    color="#3c8786"
    size="14px"
  />
</div>
`;

exports[`<RightIcon /> should render remove icon when [ready=true] and [canModify=true] 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={false}
  name="trash"
  onClick={[MockFunction]}
  pullRight={true}
  style={
    Object {
      "fontSize": "17px",
    }
  }
/>
`;

exports[`<RightIcon /> should return null when [ready=true] and [canModify=false] 1`] = `""`;
